welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:3: error: '(' expected but identifier found.
for j=1 to 3 do
    ^Source:5: error: illegal start of simple expression
		avance();
                        ^