welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
gauche();
baisseBrosse();
for j=1 to 3 do
	for i=0 to 4 do
		avance();
	done;
	gauche();
done;
avance();
avance();
gauche();
avance();
leveBrosse();
recule();
droite();
avance();
avance();